@@ -17,8 +17,6 @@ import org.eclipse.jnosql.communication.query.BooleanQueryValue;
 import org.eclipse.jnosql.communication.query.ConditionQueryValue;
 import org.eclipse.jnosql.communication.query.NumberQueryValue;
 import org.eclipse.jnosql.communication.query.StringQueryValue;
-import org.eclipse.jnosql.communication.query.data.DefaultQueryValue;
-import org.eclipse.jnosql.communication.query.data.DeleteProvider;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
@@ -26,17 +24,17 @@ import org.junit.jupiter.params.provider.ValueSource;
 class DeleteJakartaDataQueryProviderNotConditionTest {
 
 
-    private DeleteProvider deleteProvider;
+    private DeleteParser deleteParser;
 
     @BeforeEach
     void setUp() {
-        deleteProvider = new DeleteProvider();
+        deleteParser = new DeleteParser();
     }
 
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"DELETE FROM entity WHERE NOT age = 10"})
     void shouldEq(String query){
-        var deleteQuery = deleteProvider.apply(query);
+        var deleteQuery = deleteParser.apply(query);
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(deleteQuery.fields()).isEmpty();
@@ -47,7 +45,7 @@ class DeleteJakartaDataQueryProviderNotConditionTest {
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             soft.assertThat(condition.name()).isEqualTo("_NOT");
             var notCondition = (ConditionQueryValue) condition.value();
-            var queryCondition = notCondition.get().get(0);
+            var queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.condition()).isEqualTo(Condition.EQUALS);
             soft.assertThat(queryCondition.name()).isEqualTo("age");
             soft.assertThat(queryCondition.value()).isEqualTo(NumberQueryValue.of(10));
@@ -57,7 +55,7 @@ class DeleteJakartaDataQueryProviderNotConditionTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"DELETE FROM entity WHERE NOT salary = 10.15"})
     void shouldEqDouble(String query){
-        var deleteQuery = deleteProvider.apply(query);
+        var deleteQuery = deleteParser.apply(query);
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(deleteQuery.fields()).isEmpty();
@@ -68,7 +66,7 @@ class DeleteJakartaDataQueryProviderNotConditionTest {
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             soft.assertThat(condition.name()).isEqualTo("_NOT");
             var notCondition = (ConditionQueryValue) condition.value();
-            var queryCondition = notCondition.get().get(0);
+            var queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.condition()).isEqualTo(Condition.EQUALS);
             soft.assertThat(queryCondition.name()).isEqualTo("salary");
             soft.assertThat(queryCondition.value()).isEqualTo(NumberQueryValue.of(10.15));
@@ -78,7 +76,7 @@ class DeleteJakartaDataQueryProviderNotConditionTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"DELETE FROM entity WHERE NOT name = \"Otavio\""})
     void shouldEqString(String query){
-        var deleteQuery = deleteProvider.apply(query);
+        var deleteQuery = deleteParser.apply(query);
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(deleteQuery.fields()).isEmpty();
@@ -89,7 +87,7 @@ class DeleteJakartaDataQueryProviderNotConditionTest {
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             soft.assertThat(condition.name()).isEqualTo("_NOT");
             var notCondition = (ConditionQueryValue) condition.value();
-            var queryCondition = notCondition.get().get(0);
+            var queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.condition()).isEqualTo(Condition.EQUALS);
             soft.assertThat(queryCondition.name()).isEqualTo("name");
             soft.assertThat(queryCondition.value()).isEqualTo(StringQueryValue.of("Otavio"));
@@ -99,7 +97,7 @@ class DeleteJakartaDataQueryProviderNotConditionTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"DELETE FROM entity WHERE NOT name = 'Otavio'"})
     void shouldEqStringSingleQuote(String query){
-        var deleteQuery = deleteProvider.apply(query);
+        var deleteQuery = deleteParser.apply(query);
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(deleteQuery.fields()).isEmpty();
@@ -110,7 +108,7 @@ class DeleteJakartaDataQueryProviderNotConditionTest {
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             soft.assertThat(condition.name()).isEqualTo("_NOT");
             var notCondition = (ConditionQueryValue) condition.value();
-            var queryCondition = notCondition.get().get(0);
+            var queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.condition()).isEqualTo(Condition.EQUALS);
             soft.assertThat(queryCondition.name()).isEqualTo("name");
             soft.assertThat(queryCondition.value()).isEqualTo(StringQueryValue.of("Otavio"));
@@ -120,7 +118,7 @@ class DeleteJakartaDataQueryProviderNotConditionTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"DELETE FROM entity WHERE NOT name = :name"})
     void shouldEQQueryWithCondition(String query){
-        var deleteQuery = deleteProvider.apply(query);
+        var deleteQuery = deleteParser.apply(query);
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(deleteQuery.fields()).isEmpty();
@@ -131,7 +129,7 @@ class DeleteJakartaDataQueryProviderNotConditionTest {
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             soft.assertThat(condition.name()).isEqualTo("_NOT");
             var notCondition = (ConditionQueryValue) condition.value();
-            var queryCondition = notCondition.get().get(0);
+            var queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.condition()).isEqualTo(Condition.EQUALS);
             soft.assertThat(queryCondition.name()).isEqualTo("name");
             soft.assertThat(queryCondition.value()).isEqualTo(DefaultQueryValue.of("name"));
@@ -141,7 +139,7 @@ class DeleteJakartaDataQueryProviderNotConditionTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"DELETE FROM entity WHERE NOT name = ?1"})
     void shouldEQQueryWithConditionPosition(String query){
-        var deleteQuery = deleteProvider.apply(query);
+        var deleteQuery = deleteParser.apply(query);
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(deleteQuery.fields()).isEmpty();
@@ -152,7 +150,7 @@ class DeleteJakartaDataQueryProviderNotConditionTest {
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             soft.assertThat(condition.name()).isEqualTo("_NOT");
             var notCondition = (ConditionQueryValue) condition.value();
-            var queryCondition = notCondition.get().get(0);
+            var queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.condition()).isEqualTo(Condition.EQUALS);
             soft.assertThat(queryCondition.name()).isEqualTo("name");
             soft.assertThat(queryCondition.value()).isEqualTo(DefaultQueryValue.of("?1"));
@@ -162,7 +160,7 @@ class DeleteJakartaDataQueryProviderNotConditionTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"DELETE FROM entity WHERE NOT active = TRUE"})
     void shouldUseSpecialExpressionTrue(String query){
-        var deleteQuery = deleteProvider.apply(query);
+        var deleteQuery = deleteParser.apply(query);
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(deleteQuery.fields()).isEmpty();
@@ -173,7 +171,7 @@ class DeleteJakartaDataQueryProviderNotConditionTest {
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             soft.assertThat(condition.name()).isEqualTo("_NOT");
             var notCondition = (ConditionQueryValue) condition.value();
-            var queryCondition = notCondition.get().get(0);
+            var queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.condition()).isEqualTo(Condition.EQUALS);
             soft.assertThat(queryCondition.name()).isEqualTo("active");
             soft.assertThat(queryCondition.value()).isEqualTo(BooleanQueryValue.TRUE);
@@ -183,7 +181,7 @@ class DeleteJakartaDataQueryProviderNotConditionTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"DELETE FROM entity WHERE NOT active = FALSE"})
     void shouldUseSpecialExpressionFalse(String query){
-        var deleteQuery = deleteProvider.apply(query);
+        var deleteQuery = deleteParser.apply(query);
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(deleteQuery.fields()).isEmpty();
@@ -194,7 +192,7 @@ class DeleteJakartaDataQueryProviderNotConditionTest {
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             soft.assertThat(condition.name()).isEqualTo("_NOT");
             var notCondition = (ConditionQueryValue) condition.value();
-            var queryCondition = notCondition.get().get(0);
+            var queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.condition()).isEqualTo(Condition.EQUALS);
             soft.assertThat(queryCondition.name()).isEqualTo("active");
             soft.assertThat(queryCondition.value()).isEqualTo(BooleanQueryValue.FALSE);
@@ -204,7 +202,7 @@ class DeleteJakartaDataQueryProviderNotConditionTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"DELETE FROM entity WHERE NOT age < 10"})
     void shouldUseSpecialExpressionLesser(String query){
-        var deleteQuery = deleteProvider.apply(query);
+        var deleteQuery = deleteParser.apply(query);
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(deleteQuery.fields()).isEmpty();
@@ -215,7 +213,7 @@ class DeleteJakartaDataQueryProviderNotConditionTest {
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             soft.assertThat(condition.name()).isEqualTo("_NOT");
             var notCondition = (ConditionQueryValue) condition.value();
-            var queryCondition = notCondition.get().get(0);
+            var queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.condition()).isEqualTo(Condition.LESSER_THAN);
             soft.assertThat(queryCondition.name()).isEqualTo("age");
             soft.assertThat(queryCondition.value()).isEqualTo(NumberQueryValue.of(10));
@@ -225,7 +223,7 @@ class DeleteJakartaDataQueryProviderNotConditionTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"DELETE FROM entity WHERE NOT age > 10"})
     void shouldUseSpecialExpressionGreater(String query){
-        var deleteQuery = deleteProvider.apply(query);
+        var deleteQuery = deleteParser.apply(query);
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(deleteQuery.fields()).isEmpty();
@@ -236,7 +234,7 @@ class DeleteJakartaDataQueryProviderNotConditionTest {
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             soft.assertThat(condition.name()).isEqualTo("_NOT");
             var notCondition = (ConditionQueryValue) condition.value();
-            var queryCondition = notCondition.get().get(0);
+            var queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.condition()).isEqualTo(Condition.GREATER_THAN);
             soft.assertThat(queryCondition.name()).isEqualTo("age");
             soft.assertThat(queryCondition.value()).isEqualTo(NumberQueryValue.of(10));
@@ -246,7 +244,7 @@ class DeleteJakartaDataQueryProviderNotConditionTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = "DELETE FROM entity WHERE NOT age <= 10")
     void shouldUseSpecialExpressionLesserThanEquals(String query){
-        var deleteQuery = deleteProvider.apply(query);
+        var deleteQuery = deleteParser.apply(query);
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(deleteQuery.fields()).isEmpty();
@@ -257,7 +255,7 @@ class DeleteJakartaDataQueryProviderNotConditionTest {
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             soft.assertThat(condition.name()).isEqualTo("_NOT");
             var notCondition = (ConditionQueryValue) condition.value();
-            var queryCondition = notCondition.get().get(0);
+            var queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.condition()).isEqualTo(Condition.LESSER_EQUALS_THAN);
             soft.assertThat(queryCondition.name()).isEqualTo("age");
             soft.assertThat(queryCondition.value()).isEqualTo(NumberQueryValue.of(10));
@@ -267,7 +265,7 @@ class DeleteJakartaDataQueryProviderNotConditionTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = "DELETE FROM entity WHERE NOT age >= 10")
     void shouldUseSpecialExpressionGreaterThanEquals(String query){
-        var deleteQuery= deleteProvider.apply(query);
+        var deleteQuery= deleteParser.apply(query);
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(deleteQuery.fields()).isEmpty();
@@ -278,7 +276,7 @@ class DeleteJakartaDataQueryProviderNotConditionTest {
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             soft.assertThat(condition.name()).isEqualTo("_NOT");
             var notCondition = (ConditionQueryValue) condition.value();
-            var queryCondition = notCondition.get().get(0);
+            var queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.condition()).isEqualTo(Condition.GREATER_EQUALS_THAN);
             soft.assertThat(queryCondition.name()).isEqualTo("age");
             soft.assertThat(queryCondition.value()).isEqualTo(NumberQueryValue.of(10));
