@@ -18,8 +18,6 @@ import org.eclipse.jnosql.communication.query.ConditionQueryValue;
 import org.eclipse.jnosql.communication.query.NumberQueryValue;
 import org.eclipse.jnosql.communication.query.SelectQuery;
 import org.eclipse.jnosql.communication.query.StringQueryValue;
-import org.eclipse.jnosql.communication.query.data.DefaultQueryValue;
-import org.eclipse.jnosql.communication.query.data.SelectProvider;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
@@ -27,17 +25,17 @@ import org.junit.jupiter.params.provider.ValueSource;
 class SelectJakartaDataQueryProviderNotConditionTest {
 
 
-    private SelectProvider selectProvider;
+    private SelectParser selectParser;
 
     @BeforeEach
     void setUp() {
-        selectProvider = new SelectProvider();
+        selectParser = new SelectParser();
     }
 
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"WHERE NOT age = 10", "FROM entity WHERE NOT age = 10"})
     void shouldEq(String query){
-        SelectQuery selectQuery = selectProvider.apply(query, "entity");
+        SelectQuery selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -49,7 +47,7 @@ class SelectJakartaDataQueryProviderNotConditionTest {
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             soft.assertThat(condition.name()).isEqualTo("_NOT");
             var notCondition = (ConditionQueryValue) condition.value();
-            var queryCondition = notCondition.get().get(0);
+            var queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.condition()).isEqualTo(Condition.EQUALS);
             soft.assertThat(queryCondition.name()).isEqualTo("age");
             soft.assertThat(queryCondition.value()).isEqualTo(NumberQueryValue.of(10));
@@ -59,7 +57,7 @@ class SelectJakartaDataQueryProviderNotConditionTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"WHERE NOT salary = 10.15", "FROM entity WHERE NOT salary = 10.15"})
     void shouldEqDouble(String query){
-        SelectQuery selectQuery = selectProvider.apply(query, "entity");
+        SelectQuery selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -71,7 +69,7 @@ class SelectJakartaDataQueryProviderNotConditionTest {
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             soft.assertThat(condition.name()).isEqualTo("_NOT");
             var notCondition = (ConditionQueryValue) condition.value();
-            var queryCondition = notCondition.get().get(0);
+            var queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.condition()).isEqualTo(Condition.EQUALS);
             soft.assertThat(queryCondition.name()).isEqualTo("salary");
             soft.assertThat(queryCondition.value()).isEqualTo(NumberQueryValue.of(10.15));
@@ -81,7 +79,7 @@ class SelectJakartaDataQueryProviderNotConditionTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"WHERE NOT name = \"Otavio\"", "FROM entity WHERE NOT name = \"Otavio\""})
     void shouldEqString(String query){
-        SelectQuery selectQuery = selectProvider.apply(query, "entity");
+        SelectQuery selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -93,7 +91,7 @@ class SelectJakartaDataQueryProviderNotConditionTest {
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             soft.assertThat(condition.name()).isEqualTo("_NOT");
             var notCondition = (ConditionQueryValue) condition.value();
-            var queryCondition = notCondition.get().get(0);
+            var queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.condition()).isEqualTo(Condition.EQUALS);
             soft.assertThat(queryCondition.name()).isEqualTo("name");
             soft.assertThat(queryCondition.value()).isEqualTo(StringQueryValue.of("Otavio"));
@@ -103,7 +101,7 @@ class SelectJakartaDataQueryProviderNotConditionTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"WHERE NOT name = 'Otavio'", "FROM entity WHERE NOT name = 'Otavio'"})
     void shouldEqStringSingleQuote(String query){
-        SelectQuery selectQuery = selectProvider.apply(query, "entity");
+        SelectQuery selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -115,7 +113,7 @@ class SelectJakartaDataQueryProviderNotConditionTest {
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             soft.assertThat(condition.name()).isEqualTo("_NOT");
             var notCondition = (ConditionQueryValue) condition.value();
-            var queryCondition = notCondition.get().get(0);
+            var queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.condition()).isEqualTo(Condition.EQUALS);
             soft.assertThat(queryCondition.name()).isEqualTo("name");
             soft.assertThat(queryCondition.value()).isEqualTo(StringQueryValue.of("Otavio"));
@@ -125,7 +123,7 @@ class SelectJakartaDataQueryProviderNotConditionTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"WHERE NOT name = :name", "FROM entity WHERE NOT name = :name"})
     void shouldEQQueryWithCondition(String query){
-        SelectQuery selectQuery = selectProvider.apply(query, "entity");
+        SelectQuery selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -137,7 +135,7 @@ class SelectJakartaDataQueryProviderNotConditionTest {
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             soft.assertThat(condition.name()).isEqualTo("_NOT");
             var notCondition = (ConditionQueryValue) condition.value();
-            var queryCondition = notCondition.get().get(0);
+            var queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.condition()).isEqualTo(Condition.EQUALS);
             soft.assertThat(queryCondition.name()).isEqualTo("name");
             soft.assertThat(queryCondition.value()).isEqualTo(DefaultQueryValue.of("name"));
@@ -147,7 +145,7 @@ class SelectJakartaDataQueryProviderNotConditionTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"WHERE NOT name = ?1", "FROM entity WHERE NOT name = ?1"})
     void shouldEQQueryWithConditionPosition(String query){
-        SelectQuery selectQuery = selectProvider.apply(query, "entity");
+        SelectQuery selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -159,7 +157,7 @@ class SelectJakartaDataQueryProviderNotConditionTest {
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             soft.assertThat(condition.name()).isEqualTo("_NOT");
             var notCondition = (ConditionQueryValue) condition.value();
-            var queryCondition = notCondition.get().get(0);
+            var queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.condition()).isEqualTo(Condition.EQUALS);
             soft.assertThat(queryCondition.name()).isEqualTo("name");
             soft.assertThat(queryCondition.value()).isEqualTo(DefaultQueryValue.of("?1"));
@@ -169,7 +167,7 @@ class SelectJakartaDataQueryProviderNotConditionTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"WHERE NOT active = TRUE", "FROM entity WHERE NOT active = TRUE"})
     void shouldUseSpecialExpressionTrue(String query){
-        SelectQuery selectQuery = selectProvider.apply(query, "entity");
+        SelectQuery selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -181,7 +179,7 @@ class SelectJakartaDataQueryProviderNotConditionTest {
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             soft.assertThat(condition.name()).isEqualTo("_NOT");
             var notCondition = (ConditionQueryValue) condition.value();
-            var queryCondition = notCondition.get().get(0);
+            var queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.condition()).isEqualTo(Condition.EQUALS);
             soft.assertThat(queryCondition.name()).isEqualTo("active");
             soft.assertThat(queryCondition.value()).isEqualTo(BooleanQueryValue.TRUE);
@@ -191,7 +189,7 @@ class SelectJakartaDataQueryProviderNotConditionTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"WHERE NOT active = FALSE", "FROM entity WHERE NOT active = FALSE"})
     void shouldUseSpecialExpressionFalse(String query){
-        SelectQuery selectQuery = selectProvider.apply(query, "entity");
+        SelectQuery selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -203,7 +201,7 @@ class SelectJakartaDataQueryProviderNotConditionTest {
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             soft.assertThat(condition.name()).isEqualTo("_NOT");
             var notCondition = (ConditionQueryValue) condition.value();
-            var queryCondition = notCondition.get().get(0);
+            var queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.condition()).isEqualTo(Condition.EQUALS);
             soft.assertThat(queryCondition.name()).isEqualTo("active");
             soft.assertThat(queryCondition.value()).isEqualTo(BooleanQueryValue.FALSE);
@@ -213,7 +211,7 @@ class SelectJakartaDataQueryProviderNotConditionTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"WHERE NOT age < 10", "FROM entity WHERE NOT age < 10"})
     void shouldUseSpecialExpressionLesser(String query){
-        SelectQuery selectQuery = selectProvider.apply(query, "entity");
+        SelectQuery selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -225,7 +223,7 @@ class SelectJakartaDataQueryProviderNotConditionTest {
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             soft.assertThat(condition.name()).isEqualTo("_NOT");
             var notCondition = (ConditionQueryValue) condition.value();
-            var queryCondition = notCondition.get().get(0);
+            var queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.condition()).isEqualTo(Condition.LESSER_THAN);
             soft.assertThat(queryCondition.name()).isEqualTo("age");
             soft.assertThat(queryCondition.value()).isEqualTo(NumberQueryValue.of(10));
@@ -235,7 +233,7 @@ class SelectJakartaDataQueryProviderNotConditionTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"WHERE NOT age > 10", "FROM entity WHERE NOT age > 10"})
     void shouldUseSpecialExpressionGreater(String query){
-        SelectQuery selectQuery = selectProvider.apply(query, "entity");
+        SelectQuery selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -247,7 +245,7 @@ class SelectJakartaDataQueryProviderNotConditionTest {
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             soft.assertThat(condition.name()).isEqualTo("_NOT");
             var notCondition = (ConditionQueryValue) condition.value();
-            var queryCondition = notCondition.get().get(0);
+            var queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.condition()).isEqualTo(Condition.GREATER_THAN);
             soft.assertThat(queryCondition.name()).isEqualTo("age");
             soft.assertThat(queryCondition.value()).isEqualTo(NumberQueryValue.of(10));
@@ -257,7 +255,7 @@ class SelectJakartaDataQueryProviderNotConditionTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"WHERE NOT age <= 10", "FROM entity WHERE NOT age <= 10"})
     void shouldUseSpecialExpressionLesserThanEquals(String query){
-        SelectQuery selectQuery = selectProvider.apply(query, "entity");
+        SelectQuery selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -269,7 +267,7 @@ class SelectJakartaDataQueryProviderNotConditionTest {
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             soft.assertThat(condition.name()).isEqualTo("_NOT");
             var notCondition = (ConditionQueryValue) condition.value();
-            var queryCondition = notCondition.get().get(0);
+            var queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.condition()).isEqualTo(Condition.LESSER_EQUALS_THAN);
             soft.assertThat(queryCondition.name()).isEqualTo("age");
             soft.assertThat(queryCondition.value()).isEqualTo(NumberQueryValue.of(10));
@@ -279,7 +277,7 @@ class SelectJakartaDataQueryProviderNotConditionTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"WHERE NOT age >= 10", "FROM entity WHERE NOT age >= 10"})
     void shouldUseSpecialExpressionGreaterThanEquals(String query){
-        SelectQuery selectQuery = selectProvider.apply(query, "entity");
+        SelectQuery selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -291,7 +289,7 @@ class SelectJakartaDataQueryProviderNotConditionTest {
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             soft.assertThat(condition.name()).isEqualTo("_NOT");
             var notCondition = (ConditionQueryValue) condition.value();
-            var queryCondition = notCondition.get().get(0);
+            var queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.condition()).isEqualTo(Condition.GREATER_EQUALS_THAN);
             soft.assertThat(queryCondition.name()).isEqualTo("age");
             soft.assertThat(queryCondition.value()).isEqualTo(NumberQueryValue.of(10));
