@@ -32,17 +32,17 @@ import java.time.DayOfWeek;
 class SelectJakartaDataQueryProviderTest {
 
 
-    private SelectProvider selectProvider;
+    private SelectParser selectParser;
 
     @BeforeEach
     void setUp() {
-        selectProvider = new SelectProvider();
+        selectParser = new SelectParser();
     }
 
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"FROM entity"})
     void shouldReturnParserQuery(String query) {
-        SelectQuery selectQuery = selectProvider.apply(query, "entity");
+        SelectQuery selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -55,7 +55,7 @@ class SelectJakartaDataQueryProviderTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"FROM entity"})
     void shouldOverwriteTheEntity(String query) {
-        SelectQuery selectQuery = selectProvider.apply(query, "newEntity");
+        SelectQuery selectQuery = selectParser.apply(query, "newEntity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -68,7 +68,7 @@ class SelectJakartaDataQueryProviderTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"", " "})
     void shouldKeepEntityFromParameter(String query) {
-        SelectQuery selectQuery = selectProvider.apply(query, "entity");
+        SelectQuery selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -81,14 +81,14 @@ class SelectJakartaDataQueryProviderTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"", " "})
     void shouldReturnErrorWhenEntityIsMissing(String query) {
-        Assertions.assertThrows(IllegalArgumentException.class, () -> selectProvider.apply(query, null));
+        Assertions.assertThrows(IllegalArgumentException.class, () -> selectParser.apply(query, null));
     }
 
 
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"FROM entity ORDER BY name ASC", "ORDER BY name ASC"})
     void shouldQueryOrder(String query) {
-        SelectQuery selectQuery = selectProvider.apply(query, "entity");
+        SelectQuery selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -101,7 +101,7 @@ class SelectJakartaDataQueryProviderTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"FROM entity ORDER BY name DESC", "ORDER BY name DESC"})
     void shouldQueryOrderDesc(String query) {
-        SelectQuery selectQuery = selectProvider.apply(query, "entity");
+        SelectQuery selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -114,7 +114,7 @@ class SelectJakartaDataQueryProviderTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"FROM entity ORDER BY name ASC, age DESC", "ORDER BY name ASC, age DESC"})
     void shouldQueryOrders(String query) {
-        SelectQuery selectQuery = selectProvider.apply(query, "entity");
+        SelectQuery selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -127,7 +127,7 @@ class SelectJakartaDataQueryProviderTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"SELECT name, age FROM entity", "SELECT name, age"})
     void shouldSelectFields(String query) {
-        SelectQuery selectQuery = selectProvider.apply(query, "entity");
+        SelectQuery selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).hasSize(2).contains("name", "age");
@@ -141,7 +141,7 @@ class SelectJakartaDataQueryProviderTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"WHERE age = 10", "FROM entity WHERE age = 10"})
     void shouldEq(String query) {
-        SelectQuery selectQuery = selectProvider.apply(query, "entity");
+        SelectQuery selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -159,7 +159,7 @@ class SelectJakartaDataQueryProviderTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"WHERE salary = 10.15", "FROM entity WHERE salary = 10.15"})
     void shouldEqDouble(String query) {
-        SelectQuery selectQuery = selectProvider.apply(query, "entity");
+        SelectQuery selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -177,7 +177,7 @@ class SelectJakartaDataQueryProviderTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"WHERE name = \"Otavio\"", "FROM entity WHERE name = \"Otavio\""})
     void shouldEqString(String query) {
-        SelectQuery selectQuery = selectProvider.apply(query, "entity");
+        SelectQuery selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -195,7 +195,7 @@ class SelectJakartaDataQueryProviderTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"WHERE name = 'Otavio'", "FROM entity WHERE name = 'Otavio'"})
     void shouldEqStringSingleQuote(String query) {
-        SelectQuery selectQuery = selectProvider.apply(query, "entity");
+        SelectQuery selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -213,7 +213,7 @@ class SelectJakartaDataQueryProviderTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"WHERE name = :name", "FROM entity WHERE name = :name"})
     void shouldEQQueryWithCondition(String query) {
-        SelectQuery selectQuery = selectProvider.apply(query, "entity");
+        SelectQuery selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -231,7 +231,7 @@ class SelectJakartaDataQueryProviderTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"WHERE name = ?1", "FROM entity WHERE name = ?1"})
     void shouldEQQueryWithConditionPosition(String query) {
-        SelectQuery selectQuery = selectProvider.apply(query, "entity");
+        SelectQuery selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -249,7 +249,7 @@ class SelectJakartaDataQueryProviderTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"WHERE active = TRUE", "FROM entity WHERE active = TRUE"})
     void shouldUseSpecialExpressionTrue(String query) {
-        SelectQuery selectQuery = selectProvider.apply(query, "entity");
+        SelectQuery selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -267,7 +267,7 @@ class SelectJakartaDataQueryProviderTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"WHERE active = FALSE", "FROM entity WHERE active = FALSE"})
     void shouldUseSpecialExpressionFalse(String query) {
-        SelectQuery selectQuery = selectProvider.apply(query, "entity");
+        SelectQuery selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -285,7 +285,7 @@ class SelectJakartaDataQueryProviderTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"WHERE age < 10", "FROM entity WHERE age < 10"})
     void shouldUseSpecialExpressionLesser(String query) {
-        SelectQuery selectQuery = selectProvider.apply(query, "entity");
+        SelectQuery selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -303,7 +303,7 @@ class SelectJakartaDataQueryProviderTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"WHERE age > 10", "FROM entity WHERE age > 10"})
     void shouldUseSpecialExpressionGreater(String query) {
-        SelectQuery selectQuery = selectProvider.apply(query, "entity");
+        SelectQuery selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -321,7 +321,7 @@ class SelectJakartaDataQueryProviderTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"WHERE age <= 10", "FROM entity WHERE age <= 10"})
     void shouldUseSpecialExpressionLesserThanEquals(String query) {
-        SelectQuery selectQuery = selectProvider.apply(query, "entity");
+        SelectQuery selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -339,7 +339,7 @@ class SelectJakartaDataQueryProviderTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"WHERE age >= 10", "FROM entity WHERE age >= 10"})
     void shouldUseSpecialExpressionGreaterThanEquals(String query) {
-        SelectQuery selectQuery = selectProvider.apply(query, "entity");
+        SelectQuery selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -358,7 +358,7 @@ class SelectJakartaDataQueryProviderTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = {"WHERE days = java.time.DayOfWeek.MONDAY", "FROM entity WHERE days = java.time.DayOfWeek.MONDAY"})
     void shouldEqUsingEnumLiteral(String query) {
-        SelectQuery selectQuery = selectProvider.apply(query, "entity");
+        SelectQuery selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -378,7 +378,7 @@ class SelectJakartaDataQueryProviderTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = "SELECT COUNT (THIS) WHERE age = 10")
     void shouldAggregate(String query) {
-        SelectQuery selectQuery = selectProvider.apply(query, "entity");
+        SelectQuery selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -397,7 +397,7 @@ class SelectJakartaDataQueryProviderTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = "SELECT hexadecimal WHERE hexadecimal IS NULL")
     void shouldQueryIsNull(String query) {
-        SelectQuery selectQuery = selectProvider.apply(query, "entity");
+        SelectQuery selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).hasSize(1).contains("hexadecimal");
@@ -416,7 +416,7 @@ class SelectJakartaDataQueryProviderTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = "SELECT hexadecimal WHERE hexadecimal IS NOT NULL")
     void shouldQueryIsNotNull(String query) {
-        var selectQuery = selectProvider.apply(query, "entity");
+        var selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).hasSize(1).contains("hexadecimal");
@@ -427,7 +427,7 @@ class SelectJakartaDataQueryProviderTest {
             var condition = where.condition();
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             var notCondition = (ConditionQueryValue) condition.value();
-            var queryCondition = notCondition.get().get(0);
+            var queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.name()).isEqualTo("hexadecimal");
             soft.assertThat(queryCondition.value()).isEqualTo(NullQueryValue.INSTANCE);
             soft.assertThat(selectQuery.isCount()).isFalse();
@@ -437,7 +437,7 @@ class SelectJakartaDataQueryProviderTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = "WHERE isOdd = false AND numType = java.time.DayOfWeek.MONDAY")
     void shouldQueryConditionEnum(String query) {
-        var selectQuery = selectProvider.apply(query, "entity");
+        var selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -463,7 +463,7 @@ class SelectJakartaDataQueryProviderTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = "WHERE NOT age <> 10")
     void shouldUseNotNotEquals(String query) {
-        SelectQuery selectQuery = selectProvider.apply(query, "entity");
+        SelectQuery selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -482,7 +482,7 @@ class SelectJakartaDataQueryProviderTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = "WHERE age <> 10")
     void shouldUseNotEquals(String query) {
-        SelectQuery selectQuery = selectProvider.apply(query, "entity");
+        SelectQuery selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -493,7 +493,7 @@ class SelectJakartaDataQueryProviderTest {
             var condition = where.condition();
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             var notCondition = (ConditionQueryValue) condition.value();
-            var queryCondition = notCondition.get().get(0);
+            var queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.name()).isEqualTo("age");
             soft.assertThat(queryCondition.value()).isEqualTo(NumberQueryValue.of(10));
             soft.assertThat(selectQuery.isCount()).isFalse();
@@ -503,7 +503,7 @@ class SelectJakartaDataQueryProviderTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = "WHERE hexadecimal <> ' ORDER BY isn''t a keyword when inside a literal' AND hexadecimal IN ('4a', '4b', '4c')")
     void shouldUseNotEqualsCombined(String query) {
-        SelectQuery selectQuery = selectProvider.apply(query, "entity");
+        SelectQuery selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -515,9 +515,9 @@ class SelectJakartaDataQueryProviderTest {
             soft.assertThat(condition.condition()).isEqualTo(Condition.AND);
 
             var conditions = (ConditionQueryValue) condition.value();
-            var negation = (ConditionQueryValue)conditions.get().get(0).value();
+            var negation = (ConditionQueryValue)conditions.get().getFirst().value();
 
-            var queryCondition = negation.get().get(0);
+            var queryCondition = negation.get().getFirst();
             soft.assertThat(queryCondition.name()).isEqualTo("hexadecimal");
             soft.assertThat(queryCondition.value()).isEqualTo(StringQueryValue.of(" ORDER BY isn''t a keyword when inside a literal"));
             var in = conditions.get().get(1);
@@ -531,13 +531,13 @@ class SelectJakartaDataQueryProviderTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = "Select id Where isOdd = true and (id = :id or id < :exclusiveMax) Order by id Desc")
     void shouldReturnErrorWhenUseParenthesis(String query) {
-        Assertions.assertThrows(UnsupportedOperationException.class, () -> selectProvider.apply(query, "entity"));
+        Assertions.assertThrows(UnsupportedOperationException.class, () -> selectParser.apply(query, "entity"));
     }
 
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = "where employeeName LIKE ?1")
     void shouldUseLike(String query) {
-        var selectQuery = selectProvider.apply(query, "entity");
+        var selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -556,7 +556,7 @@ class SelectJakartaDataQueryProviderTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = "where employeeName LIKE  :employeeName")
     void shouldUseLike2(String query) {
-        var selectQuery = selectProvider.apply(query, "entity");
+        var selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -574,7 +574,7 @@ class SelectJakartaDataQueryProviderTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = "where employeeName LIKE 'employeeName'")
     void shouldUseLike3(String query) {
-        var selectQuery = selectProvider.apply(query, "entity");
+        var selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -592,7 +592,7 @@ class SelectJakartaDataQueryProviderTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = "where employeeName NOT LIKE 'employeeName'")
     void shouldUseNotLike(String query) {
-        var selectQuery = selectProvider.apply(query, "entity");
+        var selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -603,7 +603,7 @@ class SelectJakartaDataQueryProviderTest {
             var condition = where.condition();
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             var notCondition = (ConditionQueryValue) condition.value();
-            QueryCondition queryCondition = notCondition.get().get(0);
+            QueryCondition queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.name()).isEqualTo("employeeName");
             soft.assertThat(queryCondition.value()).isEqualTo(StringQueryValue.of("employeeName"));
         });
@@ -612,7 +612,7 @@ class SelectJakartaDataQueryProviderTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = "where employeeName NOT LIKE ?1")
     void shouldUseNotLike2(String query) {
-        var selectQuery = selectProvider.apply(query, "entity");
+        var selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -623,7 +623,7 @@ class SelectJakartaDataQueryProviderTest {
             var condition = where.condition();
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             var notCondition = (ConditionQueryValue) condition.value();
-            QueryCondition queryCondition = notCondition.get().get(0);
+            QueryCondition queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.condition()).isEqualTo(Condition.LIKE);
             soft.assertThat(queryCondition.name()).isEqualTo("employeeName");
             soft.assertThat(queryCondition.value()).isEqualTo(DefaultQueryValue.of("?1"));
@@ -634,7 +634,7 @@ class SelectJakartaDataQueryProviderTest {
     @ParameterizedTest(name = "Should parser the query {0}")
     @ValueSource(strings = "where employeeName NOT LIKE :employeeName")
     void shouldUseNotLike3(String query) {
-        var selectQuery = selectProvider.apply(query, "entity");
+        var selectQuery = selectParser.apply(query, "entity");
 
         SoftAssertions.assertSoftly(soft -> {
             soft.assertThat(selectQuery.fields()).isEmpty();
@@ -645,7 +645,7 @@ class SelectJakartaDataQueryProviderTest {
             var condition = where.condition();
             soft.assertThat(condition.condition()).isEqualTo(Condition.NOT);
             var notCondition = (ConditionQueryValue) condition.value();
-            QueryCondition queryCondition = notCondition.get().get(0);
+            QueryCondition queryCondition = notCondition.get().getFirst();
             soft.assertThat(queryCondition.condition()).isEqualTo(Condition.LIKE);
             soft.assertThat(queryCondition.name()).isEqualTo("employeeName");
             soft.assertThat(queryCondition.value()).isEqualTo(DefaultQueryValue.of(":employeeName"));
